修改获取所有测试用例接口 返回数据的结构
