# openapi/api/testcase.py
@@ -73,9 +73,9 @@ def run(case_id, env_id):
     except Exception as e:
         raise DefalutError(title=f'执行测试用例异常', detail=f'执行id为{case_id}的测试用例异常:{e}')
 
-def all(project_id, file_path):
+def all(project_id):
     try:
-        data = testcase.get_all_testcase_by_repo_id_and_file_path(project_id, file_path)
+        data = testcase.get_all_testcase_by_repo_id_and_file_path(project_id)
         return {
             'data': data
         }
