# openapi/specs/openapi.yaml
@@ -360,12 +360,6 @@ paths:
         schema:
           type: string
         required: true
-      - description: 文件路径
-        in: query
-        name: file_path
-        schema:
-         type: string
-        required: true
       responses:
         200:
           description: 获取指定project下的全部测试用例
